@@ -4117,32 +4117,28 @@ It adds the following methods:
 ZScreen class
 -------------
 
-A screen subclass that allows the underlying viewscreens to be interacted with.
-For example, a DFHack GUI tool implemented as a ZScreen can allow the player to
-interact with the underlying map. That is, even when the DFHack tool window is
-visible, players will be able to use vanilla designation tools, select units, or
-scan/drag the map around.
+A screen subclass that allows multi-layer interactivity. For example, a DFHack
+GUI tool implemented as a ZScreen can allow the player to interact with the
+underlying map, or even other DFHack ZScreen windows! That is, even when the
+DFHack tool window is visible, players will be able to use vanilla designation
+tools, select units, and scan/drag the map around.
 
-If multiple ZScreens are on the stack and the player clicks on a visible element
-of a non-top ZScreen, that ZScreen will be raised to the top of the viewscreen
-stack. This allows multiple DFHack gui tools to be usable at the same time.
-Clicks that are not over any visible ZScreen element, of course, are passed
-through to the underlying viewscreen.
+At most one ZScreen can have keyboard focus at a time. That ZScreen's widgets
+will have a chance to handle the input before anything else. If unhandled, the
+input skips all unfocused ZScreens under that ZScreen and is passed directly to
+the first non-ZScreen viewscreen. There are class attributes that can be set to
+control what kind of unhandled input is passed to the lower layers.
 
-If :kbd:`Esc` or the right mouse button is pressed, and the ZScreen widgets
-don't otherwise handle them, then the top ZScreen is dismissed. If the ZScreen
-is "pinned", then the screen is not dismissed and the input is passed on to the
-underlying DF viewscreen. :kbd:`Alt`:kbd:`L` toggles the pinned status if the
-ZScreen widgets don't otherwise handle that key sequence. If you have a
-``Panel`` with the ``pinnable`` attribute set and a frame that has pens defined
-for the pin icon (like ``Window`` widgets have by default), then a pin icon
-will appear in the upper right corner of the frame. Clicking on this icon will
-toggle the ZScreen ``pinned`` status just as if :kbd:`Alt`:kbd:`L` had been
-pressed.
+If multiple ZScreens are visible and the player left or right clicks on a
+visible element of a non-focused ZScreen, that ZScreen will be given focus. This
+allows multiple DFHack GUI tools to be usable at the same time. If the mouse is
+clicked away from the ZScreen widgets, that ZScreen loses focus. If no ZScreen
+has focus, all input is passed directly through to the first underlying
+non-ZScreen viewscreen.
 
-Keyboard input goes to the top ZScreen, as usual. If the subviews of the top
-ZScreen don't handle the input (i.e. they all return something falsey), the
-input is passed directly to the first underlying non-ZScreen.
+For a ZScreen with keyboard focus, if :kbd:`Esc` or the right mouse button is
+pressed, and the ZScreen widgets don't otherwise handle them, then the ZScreen
+is dismissed.
 
 All this behavior is implemented in ``ZScreen:onInput()``, which subclasses
 **must not override**. Instead, ZScreen subclasses should delegate all input
@@ -4152,30 +4148,60 @@ level input processor.
 When rendering, the parent viewscreen is automatically rendered first, so
 subclasses do not have to call ``self:renderParent()``. Calls to ``logic()``
 (a world "tick" when playing the game) are also passed through, so the game
-progresses normally and can be paused/unpaused as normal by the player.
-ZScreens that handle the :kbd:`Space` key may want to provide an alternate way
-to pause. Note that passing ``logic()`` calls through to the underlying map is
-required for allowing the player to drag the map with the mouse.
+progresses normally and can be paused/unpaused as normal by the player. Note
+that passing ``logic()`` calls through to the underlying map is required for
+allowing the player to drag the map with the mouse. ZScreen subclasses can set
+attributes that control whether the game is paused when the ZScreen is shown and
+whether the game is forced to continue being paused while the ZScreen is shown.
+If pausing is forced, child ``Window`` widgets will show a force-pause icon to
+indicate which tool is forcing the pausing.
 
 ZScreen provides the following functions:
 
 * ``zscreen:raise()``
 
-  Raises the ZScreen to the top of the viewscreen stack and returns a reference
-  to ``self``. A common pattern is to check if a tool dialog is already active
-  when the tool command is run and raise the existing dialog if it exists or
-  show a new dialog if it doesn't. See the sample code below for an example.
-
-* ``zscreen:togglePinned()``
-
-  Toggles whether the window closes on :kbd:`ESC` or r-click (unpinned) or not
-  (pinned).
+  Raises the ZScreen to the top of the viewscreen stack, gives it keyboard
+  focus, and returns a reference to ``self``. A common pattern is to check if a
+  tool dialog is already active when the tool command is run and raise the
+  existing dialog if it exists or show a new dialog if it doesn't. See the
+  sample code below for an example.
 
 * ``zscreen:isMouseOver()``
 
   The default implementation iterates over the direct subviews of the ZScreen
   subclass and sees if ``getMouseFramePos()`` returns a position for any of
   them. Subclasses can override this function if that logic is not appropriate.
+
+* ``zscreen:hasFocus()``
+
+  Whether the ZScreen has keyboard focus. Subclasses will generally not need to
+  check this because they can assume if they are getting input, then they have
+  focus.
+
+ZScreen subclasses can set the following attributes:
+
+* ``initial_pause`` (default: ``true``)
+
+  Whether to pause the game when the ZScreen is shown.
+
+* ``force_pause`` (default: ``false``)
+
+  Whether to ensure the game *stays* paused while the ZScreen is shown.
+
+* ``pass_pause`` (default: ``true``)
+
+  Whether to pass the pause key to the lower viewscreens if it is not handled
+  by this ZScreen.
+
+* ``pass_movement_keys`` (default: ``false``)
+
+  Whether to pass the map movement keys to the lower viewscreens if they ar not
+  handled by this ZScreen.
+
+* ``pass_mouse_clicks`` (default: ``true``)
+
+  Whether to pass mouse clicks to the lower viewscreens if they are not handled
+  by this ZScreen.
 
 Here is an example skeleton for a ZScreen tool dialog::
 
@@ -4187,11 +4213,12 @@ Here is an example skeleton for a ZScreen tool dialog::
         frame_title='My Window',
         frame={w=50, h=45},
         resizable=true, -- if resizing makes sense for your dialog
+        resize_min={w=50, h=20}, -- try to allow users to shrink your windows
     }
 
     function MyWindow:init()
         self:addviews{
-          -- add subviews here
+          -- add subview widgets here
         }
     end
 
@@ -4202,6 +4229,7 @@ Here is an example skeleton for a ZScreen tool dialog::
     MyScreen = defclass(MyScreen, gui.ZScreen)
     MyScreen.ATTRS {
         focus_path='myscreen',
+        -- set pause and passthrough attributes as appropriate
     }
 
     function MyScreen:init()
